fix - sperator didn't have height on mobile

--- a/src/components/SocialButtons.scss
+++ b/src/components/SocialButtons.scss
@@ -12,7 +12,6 @@
     .seperator {
         // border: 1px solid #373d47;
         width: 1px;
-        height: 100%;
         background-color: #373d47;
     }
 }
